--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <title>Demo Git</title>
   </head>
   <body>
-      <h1>Titulo Nuevo Modificado</h1>
-      <form action="#" method="GET">
+    <h1>Titulo Nuevo Modificado</h1>
+    <form action="#" method="GET">
         <input type="text" name="firstName" id="firstName">
+        <input type="text" name="lastName" id="lastName">
         <input type="button" value="Enviar">
       </form>
   </body>
