--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <input type="number" name="firstName" id="firstName">
         <input type="text" name="lastName" id="lastName">
         <input type="number" name="birthday" id="birthday">
+        <img src="#" alt="Test Img" />
         <input type="button" value="Enviar">
       </form>
   </body>
