--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <form action="#" method="GET">
         <input type="number" name="firstName" id="firstName">
         <input type="text" name="lastName" id="lastName">
-        <input type="number" name="birthday" id="birthday">
+        <input type="number" name="age" id="age">
+        <input type="date" name="birthday" id="birthday">
         <input type="button" value="Enviar">
       </form>
   </body>
